workshop04/dov-bear-sts.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dov-ns
  labels:
    app: dov-bear

---
apiVersion: v1
kind: Service
metadata:
  name: dov-hsvc
  namespace: dov-ns
  labels:
    app: dov-bear
    name: dov-hsvc
spec:
  clusterIP: None
  selector:
    name: dov-po
    app: dov-bear
  ports:
  - port: 8080
    targetPort: 3000

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dov-sts
  namespace: dov-ns
  labels:
    app: dov-bear
    name: dov-sts
spec:
  selector:
    matchLabels:
      app: dov-bear
      name: dov-po
  serviceName: dov-hsvc
  replicas: 4
  template:
    metadata:
      name: dov-po
      labels:
        name: dov-po
        app: dov-bear
    spec:
      containers:
      - name: myapp
        image: chukmunnlee/dov-bear:v4
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "256Mi"
            cpu: "200m"
  # volumeClaimTemplates:
  # - metadata:
  #     name: www
  #   spec:
  #     accessModes: [ "ReadWriteOnce" ]
  #     resources:
  #       requests:
  #         storage: 1Gi
