workshop04/mysql.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: db-ns 

---
apiVersion: v1
kind: Service
metadata:
  name: db-hsvc
  namespace: db-ns
spec:
  clusterIP: None
  selector:
    name: db-po
    app: db
  ports:
  - port: 3306
    targetPort: 3306

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: db-ns
  name: db-sts
  labels:
    name: db-sts
    app: db
spec:
  selector:
    matchLabels:
      app: db
      name: db-po
  serviceName: db-hsvc
  replicas: 1
  template:
    metadata:
      name: db-po
      labels:
        app: db
        name: db-po
    spec:
      containers:
      - name: db-container
        image: mysql:8.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
          name: db-port
        volumeMounts:
        - name: db-pvc
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: db-pvc
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: do-block-storage
      resources:
        requests:
          storage: 1Gi
