workshop04/dov-bear.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dov-ns
  labels:
    app: dov-bear

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dov-deploy 
  namespace: dov-ns 
  labels:
    app: dov-bear

spec:
  selector:
    matchLabels:
      name: dov-po 
      app: dov-bear
  template:
    metadata:
      name: dov-po
      labels:
        name: dov-po
        app: dov-bear
    spec:
      containers:
      - name: myapp
        image: chukmunnlee/dov-bear:v4
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "256Mi"
            cpu: "200m"
  replicas: 4

---
apiVersion: v1
kind: Service
metadata:
  name: dov-svc
  namespace: dov-ns
  labels:
    app: dov-bear
spec:
  type: ClusterIP  
  selector:
    name: dov-po
    app: dov-bear
  ports:
  - port: 8080
    targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dov-ns
  name: dov-ing
  labels:
    name: dov-ing
    app: dov-bear
spec:
  ingressClassName: nginx
  rules:
  - host: dov.144.126.241.60.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dov-svc
            port: 
              number: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: dov-hsvc
  namespace: dov-ns
  labels:
    app: dov-bear
    name: dov-hsvc
spec:
  clusterIP: None
  selector:
    name: dov-po
    app: dov-bear
  ports:
  - port: 8080
    targetPort: 3000
